--- a/chinois.html
+++ b/chinois.html
@@ -1,84 +1,100 @@
-<h1>Est-ce un bien? Est-ce un mal? Je ne sais pas.</h1> 
+<head>
+<h1>Est-ce un <em>bien</em>? Est-ce un <em>mal</em>? Je ne sais pas.</h1> 
 11 mai 2016, Alexandre Gorius
 
-<h2> Dans la nature, Bien & mal n’existent pas. L'Univers lui-même n'est ni bon ni mauvais, mais un potentiel en développement permanent.</h2>
+<h2> Dans la nature, <em>Bien</em> & <em>mal</em> n’existent pas. L'Univers lui-même n'est ni bon ni mauvais, mais un potentiel en développement permanent.</h2>
 
 
 <h4> Dans la vie, il y a 4 types de personnes.
 <ul>
-	<li> les gens qui pensent qu'Internet c'est bien,</li>
-	<li> les gens qui pensent qu'Internet c'est le mal,</li>
+	<li> les gens qui pensent qu'Internet c'est <strong>bien</strong>,</li>
+	<li> les gens qui pensent qu'Internet c'est le <strong>mal</strong>,</li>
 	<li> les gens qui pensent qu'Internet ce sont des chats,</li>
 	<li> les gens qui n'y pensent pas.</li>
 </ul>
 </h4>
 
 <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg">
+</head>
 
-Du point de vue de ce rocher sur Mars, rien ne se soucie de vos problèmes. Là haut, ça n’a pas d’importance, il n'y a aucun "problème", tout est comme cela doit être.
+<body>
 
-Ici bas, la seule réalité qui soit est celle de notre conscience. Rien n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos sens ne transmettent pas le message. Cela signifie que si nous sentons mal quelque chose, notre réalité change. C’est chose possible car notre perception est limitée: on ne peut pas voir à 360 degrés par exemple. Si nous pensons nos sensations d’une manière ou d’une autre, alors notre réalité change aussi en fonction de la manière. Ainsi, si nous pouvons autant changer notre réalité, alors rien n’est tangible.
+<p>Du point de vue de ce rocher sur Mars, rien ne se soucie de vos problèmes. Là haut, ça n’a pas d’importance, il n'y a aucun "problème", tout est comme cela doit être.</p>
 
-Il y a des preuves à cela. Tombez amoureux de quelqu’un et vous aurez une vision quasi divine de cette personne. Sortez de son emprise, cette personne se révèle différente. Pourtant elle n’a pas changé, seulement vous avez changé d’état d’esprit. Tout fonctionne de cette manière : ce n’est pas seulement que vous pouvez activement façonner votre monde de cette manière, c’est que vous le faites passivement, quoi qu’il arrive.
+<p>Ici bas, la seule réalité qui soit est celle de notre conscience. Rien n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos sens ne transmettent pas le message. Cela signifie que si nous sentons mal quelque chose, notre réalité change. C’est chose possible car notre perception est limitée: on ne peut pas voir à 360 degrés par exemple. Si nous pensons nos sensations d’une manière ou d’une autre, alors notre réalité change aussi en fonction de la manière. Ainsi, si nous pouvons autant changer notre réalité, alors rien n’est tangible.</p>
 
-[ Image : http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg légende: "qu'en pense-t-il?" ]
-Le rocher sur Mars ne fait pas la différence entre bien et mal, car pour lui, ni l’un ni l’autre n’existent.
-Tout est relatif à un point de vue. Ainsi, il n’existe pas de bien ni de mal, car bien et mal sont des valeurs absolues. Si quelque chose est bon d’après quelqu’un et mal d’après quelqu’un d’autre, alors cette chose n’est en elle-même ni bonne, ni mal. Rappelez-vous : d’après ce rocher sur Mars, il n’y a pas de séparation entre bien et mal, les deux n’existent jute pas.
+<p>Il y a des preuves à cela. Tombez amoureux de quelqu’un et vous aurez une vision quasi divine de cette personne. Sortez de son emprise, cette personne se révèle différente. Pourtant elle n’a pas changé, seulement vous avez changé d’état d’esprit. Tout fonctionne de cette manière : ce n’est pas seulement que vous pouvez activement façonner votre monde de cette manière, c’est que vous le faites passivement, quoi qu’il arrive.</p>
 
-	“Est-ce un bien? Est-ce un mal? Je ne sais pas.”
+<img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg" alt="qu'en pense-t-il?">
 
-Une histoire chinoise célèbre illustre parfaitement ce propos.
+<p>Le rocher sur Mars ne fait pas la différence entre <strong>bien</strong> et <strong>mal</strong>, car pour lui, ni l’un ni l’autre n’existent.
+Tout est relatif à un point de vue. Ainsi, il n’existe pas de <strong>bien</strong> ni de <strong>mal</strong>, car <strong>bien</strong> et <strong>mal</strong> sont des valeurs absolues. Si quelque chose est bon d’après quelqu’un et mal d’après quelqu’un d’autre, alors cette chose n’est en elle-même ni bonne, ni mal. Rappelez-vous : d’après ce rocher sur Mars, il n’y a pas de séparation entre <strong>bien</strong> et <strong>mal</strong>, les deux n’existent jute pas.</p>
 
-[ Image : https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg  légende: "Le vieux fermier chinois" ]
+	<blockquote> <p>"Est-ce un <strong>bien</strong>? Est-ce un <strong>mal</strong>? Je ne sais pas."</p></blockquote>
 
-C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval s’enfuit. Les villageois s’ameutent à la maison du fermier pour lui remonter le moral.
+<h3> Une histoire chinoise célèbre illustre parfaitement ce propos.</h3>
 
-“Quelle malchance ! Ton seul cheval ! Nous sommes vraiment désolé pour cette perte, c’est si triste !”
 
-Le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sais pas.”.
+<img src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg" alt=Le vieux fermier chinois">
 
-Le jour suivant, le cheval revient avec sept magnifiques juments. Les villageois reviennent pour célébrer la bonne nouvelle.
+<p>C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval s’enfuit. Les villageois s’ameutent à la maison du fermier pour lui remonter le moral.</p>
 
-“Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche ! Tu dois être ravis de cette nouvelle !”
+<p><q>Quelle malchance ! Ton seul cheval ! Nous sommes vraiment désolé pour cette perte, c’est si triste !</q></p>
 
-Le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sais pas.”.
+<p>Le fermier répond, <q>Est-ce un <strong>bien</strong>? Est-ce un <strong>mal</strong>? Je ne sais pas.</q>.</p>
 
-Le jour d’après, le fils du fermier s’occupe de l’entraînement des nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon tombe et se casse la jambe. Les villageois reviennent.
+<p>Le jour suivant, le cheval revient avec sept magnifiques juments. Les villageois reviennent pour célébrer la bonne nouvelle.</p>
 
-“Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en remettra bientôt, c’est tellement dommage…”
+<p><q>Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche ! Tu dois être ravis de cette nouvelle !</q></p>
 
-Le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sais pas.”.
+<p>Le fermier répond, <q>Est-ce un <strong>bien</strong>? Est-ce un <strong>mal</strong>? Je ne sais pas.</q>.</p>
 
-Le quatrième jour, l’armée arrive au village à la recherche de nouvelles jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au recrutement.
+<p>Le jour d’après, le fils du fermier s’occupe de l’entraînement des nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon tombe et se casse la jambe. Les villageois reviennent.</p>
 
-“Quelle nouvelle incroyable ! Ton fils échappera à cette guerre sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux, c’est fantastique !”
+<p><q>Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en remettra bientôt, c’est tellement dommage…</q></p>
 
-Quand bien même, le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sais pas.”.
+<p>Le fermier répond, <q>Est-ce un <strong>bien</strong>? Est-ce un mal? Je ne sais pas.</q>.</p>
 
-----
+<p>Le quatrième jour, l’armée arrive au village à la recherche de nouvelles jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au recrutement.</p>
 
-En résumé, représentons ce dialogue sous forme de tableau
+<p><q>Quelle nouvelle incroyable ! Ton fils échappera à cette guerre sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux, c’est fantastique !</q></p>
 
-   +-------------------+---------------------+
-   |                   |                     |
-   | Evénement         |  Bien ou Mal ?      |
-   +-------------------+---------------------+
-   |                   |                     |
-   | Perdre son cheval |  Cela dépend        |
-   +-------------------+---------------------+
-   |                   |                     |
-   | Gagner 7 chevaux  |  Cela dépend        |
-   +-------------------+---------------------+
-   |                   |                     |
-   | Le fils se blesse |  Cela dépend        |
-   +-------------------+---------------------+
-   |                   |                     |
-   | Evite la guerre   |  Cela dépend        |
-   +-------------------+---------------------+
-   Tableau représentant la philosophie du fermier.
-   
-   
-Conclusion  
-Le Bien et le Mal sont des valeurs culturelles et non naturelles. La banane est bonne pour le singe, le singe n'est pas bon pour la banane. N'en faisons donc pas un fromage...
+<p>Quand bien même, le fermier répond, <q>Est-ce un <strong>bien</strong>? Est-ce un <strong>mal</strong>? Je ne sais pas.</q>.</p>
 
 ----
+
+<h4>En résumé, représentons ce dialogue sous forme de tableau</h4>
+
+<table style="width:40%">
+<caption>Tableau représentant la philosophie du fermier.</caption>
+	<tr>
+		<td>Evénement</td>
+		<td><strong>Bien</strong> ou <strong>Mal</strong> ?</td>
+	</tr>
+<tr>
+		<td>Perdre son cheval</td>
+		<td>Cela dépend</td>
+	</tr>
+<tr>
+		<td>Gagner 7 chevaux</td>
+		<td>Cela dépend</td>
+	</tr>
+<tr>
+		<td>Le fils se blesse</td>
+		<td>Cela dépend</td>
+	</tr>
+<tr>
+		<td>Evite la guerre</td>
+		<td>Cela dépend</td>
+	</tr>
+</table>	
+
+</body>
+
+<footer>   
+   
+<h3>Conclusion</h3>  
+<p>Le <strong>Bien</strong> et le <strong>Mal</strong> sont des valeurs culturelles et non naturelles. La banane est bonne pour le singe, le singe n'est pas bon pour la banane. N'en faisons donc pas un fromage...</p>
+
+----
+</footer>
