--- a/chinois.html
+++ b/chinois.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-
+<link href="chinois.css" rel="stylesheet">
 <h1>Est-ce un <em>bien</em>? Est-ce un <em>mal</em>? Je ne sais pas.</h1> 
 11 mai 2016, Alexandre Gorius
 
