--- a/chinois.html
+++ b/chinois.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<head>
+<header>
 <link href="chinois.css" rel="stylesheet">
 <h1>Est-ce un <em>bien</em>? Est-ce un <em>mal</em>? Je ne sais pas.</h1> 
 11 mai 2016, Alexandre Gorius
+</header>
+
+<body>
 
 <h2> Dans la nature, <em>Bien</em> & <em>mal</em> n’existent pas. L'Univers lui-même n'est ni bon ni mauvais, mais un potentiel en développement permanent.</h2>
 
@@ -19,11 +22,11 @@
 <figure>
 <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="">
 </figure>
-</head>
+
 
 <hr>
 
-<body>
+
 
 <p>Du point de vue de ce rocher sur <a href="https://fr.wikipedia.org/wiki/Mars_(plan%C3%A8te)" target="_blank" title="planete rouge"> Mars</a>, rien ne se soucie de vos problèmes. Là haut, ça n’a pas d’importance, il n'y a aucun "problème", tout est comme cela doit être.</p>
 
@@ -37,7 +40,7 @@
 <p>Le rocher sur Mars ne fait pas la différence entre <strong class="bien">bien</strong> et <strong class="mal">mal</strong>, car pour lui, ni l’un ni l’autre n’existent.
 Tout est relatif à un point de vue. Ainsi, il n’existe pas de <strong class="bien">bien</strong> ni de <strong class="mal">mal</strong>, car <strong class="bien">bien</strong> et <strong class= "mal">mal</strong> sont des valeurs absolues. Si quelque chose est bon d’après quelqu’un et mal d’après quelqu’un d’autre, alors cette chose n’est en elle-même ni bonne, ni mal. Rappelez-vous : d’après ce <a href="https://fr.wikipedia.org/wiki/Rocher" target="_blank" title="rock"> rocher</a> sur Mars, il n’y a pas de séparation entre <strong class="bien">bien</strong> et <strong class="mal">mal</strong>, les deux n’existent jute pas.</p>
 
-	<blockquote> <p>"Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas."	</p></blockquote>
+	<p><blockquote> Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas."	</blockquote></p>
 
 <h3> Une histoire chinoise célèbre illustre parfaitement ce propos.</h3>
 
@@ -49,27 +52,26 @@ Tout est relatif à un point de vue. Ainsi, il n’existe pas de <strong class="
 
 <p><q>Quelle malchance ! Ton seul cheval ! Nous sommes vraiment désolé pour cette perte, c’est si triste !</q></p>
 
-<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q>.</p>
+<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
 
 <p>Le jour suivant, le cheval revient avec sept magnifiques juments. Les villageois reviennent pour célébrer la bonne nouvelle.</p>
 
-<p><q>Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche ! Tu dois être ravis de cette nouvelle !</q></p>
+<q>Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche ! Tu dois être ravis de cette nouvelle !</q>
 
-<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q>.</p>
+<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
 
 <p>Le jour d’après, le fils du fermier s’occupe de l’entraînement des nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon tombe et se casse la jambe. Les villageois reviennent.</p>
 
-<p><q>Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en remettra bientôt, c’est tellement dommage…</q></p>
+<q>Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en remettra bientôt, c’est tellement dommage…</q>
 
-<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q>.</p>
+<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
 
 <p>Le quatrième jour, l’armée arrive au village à la recherche de nouvelles jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au recrutement.</p>
 
-<p><q>Quelle nouvelle incroyable ! Ton fils échappera à cette guerre sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux, c’est fantastique !</q></p>
+<q>Quelle nouvelle incroyable ! Ton fils échappera à cette guerre sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux, c’est fantastique !</q>
 
-<p>Quand bien même, le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q>.</p>
+<p>Quand bien même, le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
 
-----
 
 <h4>En résumé, représentons ce dialogue sous forme de tableau</h4>
 <figure>
