--- a/chinois.html
+++ b/chinois.html
@@ -1,110 +1,110 @@
-<!DOCTYPE html>
-<header>
-<link href="chinois.css" rel="stylesheet">
-<h1>Est-ce un <em>bien</em>? Est-ce un <em>mal</em>? Je ne sais pas.</h1> 
-11 mai 2016, Alexandre Gorius
-</header>
+	<!DOCTYPE html>
+	<header>
+	<link href="chinois.css" rel="stylesheet">
+	<h1>Est-ce un <em>bien</em>? Est-ce un <em>mal</em>? Je ne sais pas.</h1> 
+	11 mai 2016, Alexandre Gorius
+	</header>
 
-<body>
+	<body>
 
-<h2> Dans la nature, <em>Bien</em> & <em>mal</em> n’existent pas. L'Univers lui-même n'est ni bon ni mauvais, mais un potentiel en développement permanent.</h2>
-
-
-<h4> Dans la vie, il y a 4 types de personnes.
-
-<ul>
-	<li> les gens qui pensent qu'<a href="https://fr.wikipedia.org/wiki/Internet" target="_blank" title="Le web" > Internet</a> c'est <strong class="bien">bien</strong>,</li>
-	<li> les gens qui pensent qu'Internet c'est le <strong class="mal">mal</strong>,</li>
-	<li> les gens qui pensent qu'Internet ce sont des chats,</li>
-	<li> les gens qui n'y pensent pas.</li>
-</ul>
-</h4>
-<figure>
-<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="">
-</figure>
+	<h2> Dans la nature, <em>Bien</em> & <em>mal</em> n’existent pas. L'Univers lui-même n'est ni bon ni mauvais, mais un potentiel en développement permanent.</h2>
 
 
-<hr>
+	<h4> Dans la vie, il y a 4 types de personnes.
+
+	<ul>
+		<li> les gens qui pensent qu'<a href="https://fr.wikipedia.org/wiki/Internet" target="_blank" title="Le web" > Internet</a> c'est <strong class="bien">bien</strong>,</li>
+		<li> les gens qui pensent qu'Internet c'est le <strong class="mal">mal</strong>,</li>
+		<li> les gens qui pensent qu'Internet ce sont des chats,</li>
+		<li> les gens qui n'y pensent pas.</li>
+	</ul>
+	</h4>
+	<figure>
+	<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="">
+	</figure>
+
+
+	<hr>
 
 
 
-<p>Du point de vue de ce rocher sur <a href="https://fr.wikipedia.org/wiki/Mars_(plan%C3%A8te)" target="_blank" title="planete rouge"> Mars</a>, rien ne se soucie de vos problèmes. Là haut, ça n’a pas d’importance, il n'y a aucun "problème", tout est comme cela doit être.</p>
+	<p>Du point de vue de ce rocher sur <a href="https://fr.wikipedia.org/wiki/Mars_(plan%C3%A8te)" target="_blank" title="planete rouge"> Mars</a>, rien ne se soucie de vos problèmes. Là haut, ça n’a pas d’importance, il n'y a aucun "problème", tout est comme cela doit être.</p>
 
-<p>Ici bas, la seule réalité qui soit est celle de notre conscience. Rien n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos sens ne transmettent pas le message. Cela signifie que si nous sentons mal quelque chose, notre réalité change. C’est chose possible car notre perception est limitée: on ne peut pas voir à 360 degrés par exemple. Si nous pensons nos sensations d’une manière ou d’une autre, alors notre réalité change aussi en fonction de la manière. Ainsi, si nous pouvons autant changer notre réalité, alors rien n’est tangible.</p>
+	<p>Ici bas, la seule réalité qui soit est celle de notre conscience. Rien n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos sens ne transmettent pas le message. Cela signifie que si nous sentons mal quelque chose, notre réalité change. C’est chose possible car notre perception est limitée: on ne peut pas voir à 360 degrés par exemple. Si nous pensons nos sensations d’une manière ou d’une autre, alors notre réalité change aussi en fonction de la manière. Ainsi, si nous pouvons autant changer notre réalité, alors rien n’est tangible.</p>
 
-<p>Il y a des preuves à cela. Tombez amoureux de quelqu’un et vous aurez une vision quasi divine de cette personne. Sortez de son emprise, cette personne se révèle différente. Pourtant elle n’a pas changé, seulement vous avez changé d’état d’esprit. Tout fonctionne de cette manière : ce n’est pas seulement que vous pouvez activement façonner votre monde de cette manière, c’est que vous le faites passivement, quoi qu’il arrive.</p>
+	<p>Il y a des preuves à cela. Tombez amoureux de quelqu’un et vous aurez une vision quasi divine de cette personne. Sortez de son emprise, cette personne se révèle différente. Pourtant elle n’a pas changé, seulement vous avez changé d’état d’esprit. Tout fonctionne de cette manière : ce n’est pas seulement que vous pouvez activement façonner votre monde de cette manière, c’est que vous le faites passivement, quoi qu’il arrive.</p>
 
-<figure>
-<img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg" alt="qu'en pense-t-il?">
-</figure>
-<p>Le rocher sur Mars ne fait pas la différence entre <strong class="bien">bien</strong> et <strong class="mal">mal</strong>, car pour lui, ni l’un ni l’autre n’existent.
-Tout est relatif à un point de vue. Ainsi, il n’existe pas de <strong class="bien">bien</strong> ni de <strong class="mal">mal</strong>, car <strong class="bien">bien</strong> et <strong class= "mal">mal</strong> sont des valeurs absolues. Si quelque chose est bon d’après quelqu’un et mal d’après quelqu’un d’autre, alors cette chose n’est en elle-même ni bonne, ni mal. Rappelez-vous : d’après ce <a href="https://fr.wikipedia.org/wiki/Rocher" target="_blank" title="rock"> rocher</a> sur Mars, il n’y a pas de séparation entre <strong class="bien">bien</strong> et <strong class="mal">mal</strong>, les deux n’existent jute pas.</p>
+	<figure>
+	<img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg" alt="qu'en pense-t-il?">
+	</figure>
+	<p>Le rocher sur Mars ne fait pas la différence entre <strong class="bien">bien</strong> et <strong class="mal">mal</strong>, car pour lui, ni l’un ni l’autre n’existent.
+	Tout est relatif à un point de vue. Ainsi, il n’existe pas de <strong class="bien">bien</strong> ni de <strong class="mal">mal</strong>, car <strong class="bien">bien</strong> et <strong class= "mal">mal</strong> sont des valeurs absolues. Si quelque chose est bon d’après quelqu’un et mal d’après quelqu’un d’autre, alors cette chose n’est en elle-même ni bonne, ni mal. Rappelez-vous : d’après ce <a href="https://fr.wikipedia.org/wiki/Rocher" target="_blank" title="rock"> rocher</a> sur Mars, il n’y a pas de séparation entre <strong class="bien">bien</strong> et <strong class="mal">mal</strong>, les deux n’existent jute pas.</p>
 
-	<p><blockquote> Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas."	</blockquote></p>
+		<p><blockquote> Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas."	</blockquote></p>
 
-<h3> Une histoire chinoise célèbre illustre parfaitement ce propos.</h3>
+	<h3> Une histoire chinoise célèbre illustre parfaitement ce propos.</h3>
 
-<figure>
-<img src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg" alt=Le vieux fermier chinois">
-</figure>
+	<figure>
+	<img src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg" alt="Le vieux fermier chinois">
+	</figure>
 
-<p>C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval s’enfuit. Les villageois s’ameutent à la maison du fermier pour lui remonter le moral.</p>
+	<p>C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval s’enfuit. Les villageois s’ameutent à la maison du fermier pour lui remonter le moral.</p>
 
-<p><q>Quelle malchance ! Ton seul cheval ! Nous sommes vraiment désolé pour cette perte, c’est si triste !</q></p>
+	<p><q>Quelle malchance ! Ton seul cheval ! Nous sommes vraiment désolé pour cette perte, c’est si triste !</q></p>
 
-<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
+	<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
 
-<p>Le jour suivant, le cheval revient avec sept magnifiques juments. Les villageois reviennent pour célébrer la bonne nouvelle.</p>
+	<p>Le jour suivant, le cheval revient avec sept magnifiques juments. Les villageois reviennent pour célébrer la bonne nouvelle.</p>
 
-<q>Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche ! Tu dois être ravis de cette nouvelle !</q>
+	<q>Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche ! Tu dois être ravis de cette nouvelle !</q>
 
-<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
+	<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
 
-<p>Le jour d’après, le fils du fermier s’occupe de l’entraînement des nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon tombe et se casse la jambe. Les villageois reviennent.</p>
+	<p>Le jour d’après, le fils du fermier s’occupe de l’entraînement des nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon tombe et se casse la jambe. Les villageois reviennent.</p>
 
-<q>Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en remettra bientôt, c’est tellement dommage…</q>
+	<q>Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en remettra bientôt, c’est tellement dommage…</q>
 
-<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
+	<p>Le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
 
-<p>Le quatrième jour, l’armée arrive au village à la recherche de nouvelles jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au recrutement.</p>
+	<p>Le quatrième jour, l’armée arrive au village à la recherche de nouvelles jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au recrutement.</p>
 
-<q>Quelle nouvelle incroyable ! Ton fils échappera à cette guerre sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux, c’est fantastique !</q>
+	<q>Quelle nouvelle incroyable ! Ton fils échappera à cette guerre sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux, c’est fantastique !</q>
 
-<p>Quand bien même, le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
+	<p>Quand bien même, le fermier répond, <q>Est-ce un <strong class="bien">bien</strong>? Est-ce un <strong class="mal">mal</strong>? Je ne sais pas.</q></p>
 
 
-<h4>En résumé, représentons ce dialogue sous forme de tableau</h4>
-<figure>
-<table style="width:40%">
-<caption>Tableau représentant la philosophie du fermier.</caption>
+	<h4>En résumé, représentons ce dialogue sous forme de tableau</h4>
+	<figure>
+	<table style="width:40%">
+	<caption>Tableau représentant la philosophie du fermier.</caption>
+		<tr>
+			<td>Evénement</td>
+			<td><strong class="bien">Bien</strong> ou <strong class="mal">Mal</strong> ?</td>
+		</tr>
 	<tr>
-		<td>Evénement</td>
-		<td><strong class="bien">Bien</strong> ou <strong class="mal">Mal</strong> ?</td>
-	</tr>
-<tr>
-		<td>Perdre son cheval</td>
-		<td>Cela dépend</td>
-	</tr>
-<tr>
-		<td>Gagner 7 chevaux</td>
-		<td>Cela dépend</td>
-	</tr>
-<tr>
-		<td>Le fils se blesse</td>
-		<td>Cela dépend</td>
-	</tr>
-<tr>
-		<td>Evite la guerre</td>
-		<td>Cela dépend</td>
-	</tr>
-</table>	
-</figure>
-</body>
+			<td>Perdre son cheval</td>
+			<td>Cela dépend</td>
+		</tr>
+	<tr>
+			<td>Gagner 7 chevaux</td>
+			<td>Cela dépend</td>
+		</tr>
+	<tr>
+			<td>Le fils se blesse</td>
+			<td>Cela dépend</td>
+		</tr>
+	<tr>
+			<td>Evite la guerre</td>
+			<td>Cela dépend</td>
+		</tr>
+	</table>	
+	</figure>
+	</body>
 
-<footer>   
-   
-<h3>Conclusion</h3>  
-<p>Le <strong class="bien">Bien</strong> et le <strong class="mal">Mal</strong> sont des valeurs culturelles et non naturelles. La banane est bonne pour le singe, le singe n'est pas bon pour la banane. N'en faisons donc pas un fromage...</p>
+	<footer>
+	   
+	<h3>Conclusion</h3>  
+	<p>Le <strong class="bien">Bien</strong> et le <strong class="mal">Mal</strong> sont des valeurs culturelles et non naturelles. La banane est bonne pour le singe, le singe n'est pas bon pour la banane. N'en faisons donc pas un fromage...</p>
 
-----
-</footer>
+	----
+	</footer>
