--- a/Turlututu/Turlututu.html
+++ b/Turlututu/Turlututu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
 
 <link href="Turlututu.css" rel="stylesheet">
@@ -8,8 +8,13 @@
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-	<ul class="menu">
-      <li> <a href="#"></a>	<img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/restdblogo.png" class="image_restdb"></li> <!--accueil-->
+
+</head>
+
+<body>
+
+      <ul class="menu">
+      <li> <a href="#"></a>   <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/restdblogo.png" class="image_restdb"></li> <!--accueil-->
       <li> <a href="#">Features</a></li>
       <li> <a href="#">Doc</a></li>
       <li> <a href="#">Blog</a></li>
@@ -20,15 +25,15 @@
       <li class="droite"> <i class="fas fa-user-alt"></i> <a href="#">Log in</a></li>
       </ul>
 
-</head>
-
-<body>
 
 <div class="partie1">
 
       <div class="container">
 
 	<img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/restdblogo.png" class="logo">
+
+      <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/JSGeek.png" class="geek">
+
 	<h1 class="slogan"> The Plug and Play Database service </h1>
      <button class="button"> <a href="/signup/">Start building NOW »</a></button>     
 	
@@ -36,14 +41,50 @@
 
 </div>
 
+<div class="partie2">
+
+<h1> For awesome projects with deadlines </h1> 
 
 
+</div>      
+
+<div class="partie3">
 	
+      <div class="container2">
+
+  
+            <div class="partie_g">
+
+                  <h2> > Simple to use </h2>
+
+                  <p> restdb.io is probably the easiest online NoSQL database backend for web and serverless applications. Model your information quickly. The data management application, schema and REST API are instantly available.</p>
+
+                  <h2> >  User friendly </h2>
+
+                  <p> In the backend, users collaborate and work with data in multiple ways. A centralized search let's users quickly search through the entire database quickly (if given access). It's also a breeze to navigate the database relationships.</p>
+
+
+            </div>     
+            
+            <div class="partie_d">
+            
+                  <h2> > Developer friendly </h2>
+
+                  <p> The online database tool is designed for the modern web with high performance REST API and NoSQL MongoDB query language, server-side codehooks, user authentication (Auth0), Media Archive, Realtime messages and secure Ajax/CORS.
+                  </p>
+
+                  <h2> > More than a database </h2>
+
+                  <p> restdb.io NoSQL databases can also serve web pages. Use HTML, Javascript, jQuery, Angular, ReactJS (or your favorite framework) on restdb.io Pages with server-side data-binding. Add your own secure domains for the web pages and the REST API. </p>
+
+            </div> 
+
+
+
+      </div>      
+</div>
+
 
 </body>
 
-<footer>
-	
-
-</footer>
-
+</html>
