--- a/Turlututu/Turlututu.html
+++ b/Turlututu/Turlututu.html
@@ -6,7 +6,7 @@
 
 <link href="https://necolas.github.io/normalize.css/latest/normalize.css" rel="stylesheet">
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+      
 
 
 </head>
@@ -35,6 +35,8 @@
       <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/JSGeek.png" class="geek">
 
 	<h1 class="slogan"> The Plug and Play Database service </h1>
+
+      <button class="button"> <a href="/signup/">Start building NOW»</a></button>
            
 	
       </div>
