--- a/CodeCollab/codecollab.html
+++ b/CodeCollab/codecollab.html
@@ -9,18 +9,42 @@
 
 <body>
 
-	<ul class="menu">
-      <li class="liste1"> <a class="liens_menu" href="#"></a>   <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/activecollab.png" class="image_collab"></li> <!--accueil-->
-      <li class="liste1"> <a class="liens_menu" href="#">Features</a></li>
-      <li class="liste1"> <a class="liens_menu" href="#">Pricing</a></li>
-      <li class="liste1"> <a class="liens_menu" href="#">More+</a></li>
-      <li class="liste1"> <a class="liens_menu" href="#">Help & Support</a></li>
-      <li class="liste1"> <a class="liens_menu" href="#">Blog</a></li>
-      <li class="liste1"> <a class="liens_menu" href="#">Ressources</a></li>
-
+<div>
+	<ul class="menu1">
+      <li> <a class="liens_menu" href="#"></a>   <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/activecollab.png" class="image_collab"></li> <!--accueil-->
+      <li> <a class="liens_menu" href="#">Features</a></li>
+      <li> <a class="liens_menu" href="#">Pricing</a></li>
+      <li> <a class="liens_menu" href="#">More+</a></li>
+    </ul>  
+	
+	<ul class="menu2">
+      <li class=> <a class="liens_menu" href="#">Help & Support</a></li>
+      <li class=> <a class="liens_menu" href="#">Blog</a></li>
+      <li class=		> <a class="liens_menu" href="#">Ressources</a></li>
+      <li><button class="button1"> <a class="liens_bout1" href="/signup/">Try It Free»</a></button></li>
+      <li><button class="button2"> <a class="liens_bout2" href="/signup/">Sign In»</a></button></li>
 	</ul>
+</div>
+
+<div class="partie1">
+	
+	<h1>Powerfull, yet simple project management tool</h1> 
 
 
+</div>	
+
+<div class="partie2">
+
+	<div>
+		<h2>Task Management</h2>
+			<p>Stay organized with an advanced to-do list and track to your project</p>
+	</div>
+	
+	<div>
+		<h2>Team collaboration</h2>
+			<p>		
+
+</div>	
 
 </body>
 
