--- a/CodeCollab/codecollab.html
+++ b/CodeCollab/codecollab.html
@@ -9,22 +9,22 @@
 
 <body>
 
-<div>
-	<ul class="menu1">
-      <li> <a class="liens_menu" href="#"></a>   <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/activecollab.png" class="image_collab"></li> <!--accueil-->
-      <li> <a class="liens_menu" href="#">Features</a></li>
-      <li> <a class="liens_menu" href="#">Pricing</a></li>
-      <li> <a class="liens_menu" href="#">More+</a></li>
-    </ul>  
-	
-	<ul class="menu2">
-      <li class=> <a class="liens_menu" href="#">Help & Support</a></li>
-      <li class=> <a class="liens_menu" href="#">Blog</a></li>
-      <li class=		> <a class="liens_menu" href="#">Ressources</a></li>
-      <li><button class="button1"> <a class="liens_bout1" href="/signup/">Try It Free»</a></button></li>
-      <li><button class="button2"> <a class="liens_bout2" href="/signup/">Sign In»</a></button></li>
+<nav class="navbar">
+	<ul class="menu">
+      <li class="menu1"> <a class="liens_menu" href="#"></a>   <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/activecollab.png" class="image_collab"></li> <!--accueil-->
+      <li class="menu1"> <a class="liens_menu" href="#">Features</a></li>
+      <li class="menu1"> <a class="liens_menu" href="#">Pricing</a></li>
+      <li class="menu1"> <a class="liens_menu" href="#">More+</a></li>
 	</ul>
-</div>
+
+	<ul class="menu0">
+      <li class="menu2"> <a class="liens_menu" href="#">Help & Support</a></li>
+      <li class="menu2"> <a class="liens_menu" href="#">Blog</a></li>
+      <li class="menu2"> <a class="liens_menu" href="#">Ressources</a></li>
+      <li class="menu2"><button class="button1"> <a class="liens_bout1" href="/signup/">Try It Free»</a></button></li>
+      <li class="menu2"><button class="button2"> <a class="liens_bout2" href="/signup/">Sign In»</a></button></li>
+	</ul>
+</nav>
 
 <div class="partie1">
 	
@@ -35,23 +35,85 @@
 
 <div class="partie2">
 
-	<div>
+	<div class="item">
 		<h2>Task Management</h2>
-			<p>Stay organized with an advanced to-do list and track to your project</p>
+			<p>Stay organized with an advanced to-do list and track to your project.</p>
 	</div>
 	
-	<div>
+	<div class="item">
 		<h2>Team collaboration</h2>
-			<p>		
+			<p>	Efficiently work together with your team to deliver top-notch results.</p>
+	</div>
+	
+	<div class="item">
+		<h2>Time tracking</h2>
+			<p>Track every minute of your work and bill clients accordingly.</p>
+	</div>		
+
+	<div class="item">
+		<h2>Invoicing</h2>
+			<p>	Easily issue invoices ofr your work, save time and get paid.</p>
+	</div>							
 
 </div>	
 
+<div class="partie3">
+
+	<p class="projet">Active Collab helps your team stay organized when you outgrow email. But it’s so much more than that — with plenty of neat add-ons, it’s a one-stop solution for all your business needs.</p>
+
+	<button class="button3"> <a class="liens_bout1" href="/signup/">Try it for free for 30 days!»</a></button>
+	
+	<p class="credit">No credit card required, unsubscribe at any time.</p>
+
+	<img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/projects-screenshot.png" class="screen">
+	<img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/bg.png" class="fond">
+
+</div>		
+
+<div class="partie4">
+	
+
+	<div>
+		<h1 class="price"> On our cloud or your server</h1>
+		<p class="price">Active Collab runs in the cloud like most browser apps today, but you can also install it on your own server. Try it free for 30 days and then decide what works best for you. </p>
+	</div>
+	
+	<div class="grille2">	
+		<div class="item2">
+			<img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/price.png">
+			<h2> Monthly Plans</h2>
+			<p>In the cloud</p>
+			<p>No setup</p>
+			<p> Ready in 2 minutes</p>
+			<button class="button4"> <a class="liens_bout1" href="/signup/">Plans and pricing»</a></button>
+			<i> from $25/month</i>
+		</div>
+
+		<div class="item2">
+			<img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/host.png">	
+			<h2>Self Hosted</h2>
+			<p>Installs on your own server</p>
+			<p>Unlimited team members</p>
+			<p>One year of support included</p>
+			<button 	class="button4"> <a class="liens_bout1" href="/signup/">Try it for free for 30 days!»</a> </button>
+			<i>one time fee $999</i>
+		</div>
+
+
+	</div>	
+
+
+	
+
+</div>
+
+
+
+
+
+
+
+
 </body>
-
-
-
-
-
-
 
 </html>
