--- a/CodeCollab/codecollab.html
+++ b/CodeCollab/codecollab.html
@@ -101,9 +101,25 @@
 
 
 	</div>	
-
-
 	
+
+</div>
+
+<div class="partie5">
+
+	<h1 class="text"> Who’s using Active Collab?</h1>
+	<p class="text"> For more than 8 years, we've been trusted by over 200,000 people in companies ranging from small businesses to Fortune 500 members, universities and government institutions.</p>
+
+<ul class="liste_logo">
+
+            <li> <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/miles.png" class="logo1"></li>
+            <li> <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/apptruck.png" class="logo2"></li>
+            <li> <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/spectrum.png" class="logo5"></li>
+            <li> <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/knowit.png" class="logo3"></li>
+            <li> <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/hatchery.png" class="logo4"></li>
+            <li> <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/fwd.png" class="logo6"></li>
+
+      </ul>
 
 </div>
 
