--- a/CodeCollab/codecollab.html
+++ b/CodeCollab/codecollab.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ 	<!DOCTYPE html>
 <html>
 <head>
 
@@ -80,7 +80,7 @@
 	
 	<div class="grille2">	
 		<div class="item2">
-			<img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/price.png">
+			<img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/Price.png">
 			<h2> Monthly Plans</h2>
 			<p>In the cloud</p>
 			<p>No setup</p>
@@ -123,10 +123,120 @@
 
 </div>
 
+<div class="partie6">
+
+	<h1 class="text"> Get started with Active Collab</h1>
+	<p class="text">Enter your details to get a month of Active Collab absolutely free, without any limitations.</p>
+
+<div class="formu">		<form action="/ma-page-de-traitement" method="post">
+    <div>
+        <label for="name">Your Name or Organization	 :</label>
+        <input type="text" id="name" name="user_name" placeholder="Enter name or Organization">
+    </div>
+    <div>
+        <label for="mail">E-mail :</label>
+        <input type="email" id="mail" name="user_mail" placeholder="name@Organization.com">
+    </div>
+    <div>
+        <label for="msg">Password :</label>
+        <input type="Password" name="user_password" placeholder="The longer, the stronger">
+    </div>
+    <div> <button class="submit"> <a class="liens_bout1" href="/signup/">Start my free month»</a> </button>
+    </div>	
+</form>
+
+	<p class="textform"> Hope you'll enjoy it</p>
+
+</div>
+
+<p class="underline">Your data is safe with us.</p>
+<p class="underline">Active Collab security</p>
+
+</div>
+
+<div class="partie7">
+
+	<div class="footer">
+
+		<div><ul>
+				<li class="footer_titre">Product</li>
+				<li class="footer_texte">Features</li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+			</ul>
+		</div>	
+
+		<div><ul>
+				<li class="footer_titre">Alternative</li>
+				<li class="footer_texte">Best project management tools comparison</li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+			</ul>
+		</div>	
+
+		<div><ul>
+				<li class="footer_titre">Solution</li>
+				<li class="footer_texte">Self project management</li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+
+			</ul>
+		</div>
+
+		<div><ul>
+				<li class="footer_titre">For Teams</li>
+				<li class="footer_texte">Marketing</li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+
+			</ul>
+		</div>	
+
+		<div><ul>
+				<li class="footer_titre">Company</li>
+				<li class="footer_texte">About & Contact</li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+			</ul>
+		</div>	
+
+		<div><ul>
+				<li class="footer_titre">Ressources </li>
+				<li class="footer_texte">Project management guide</li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>
+				<li class="footer_texte"> </li>	
+			</ul>
+		</div>		
 
 
+	</div>
 
 
+		<div class="icon">
+
+			<ul>
+				
+				<li class="footer_icon"></li>
+				<li class="footer_icon"></li>
+				<li class="footer_icon"></li>
+				<li class="footer_icon"></li>
+				<li class="footer_icon"></li>	
+
+			</ul>
+
+				<p class="underline"> Happy collaborating!</p>
+				<p class="underline"> c 2007-2017 ActiveCollab</p>
+
+
+		</div>
+</div>
 
 
 
