--- a/CodeCollab/codecollab.html
+++ b/CodeCollab/codecollab.html
@@ -221,15 +221,15 @@
 
 		<div class="icon">
 
-			<ul>
+			
 				
-				<li class="footer_icon"></li>
-				<li class="footer_icon"></li>
-				<li class="footer_icon"></li>
-				<li class="footer_icon"></li>
-				<li class="footer_icon"></li>	
+				<div><img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/FB.png""></div>
+				<div><img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/FB.png""></div>
+				<div><img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/FB.png""></div>
+				<div><img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/FB.png""></div>
+				<div><img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/FB.png""></div>	
 
-			</ul>
+		
 
 				<p class="underline"> Happy collaborating!</p>
 				<p class="underline"> c 2007-2017 ActiveCollab</p>
