--- a/Ameliorer Typo/typo.html
+++ b/Ameliorer Typo/typo.html
@@ -9,7 +9,10 @@
 <body>
 	
 <header>
+  <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/typo.jpg" class="image1">
 	<h1>8 façons simples d’améliorer la typographie dans vos designs</h1>
+
+
 
 <p><em>Par <a href="http://www.aisleone.net/about/" hreflang="en">Antonio Carusone</a></em></p>
 
@@ -219,7 +222,7 @@ a {
 			</ul>
 
 </li>
-</ol>
+</li></ol>
 
 
 
