--- a/Ameliorer Typo/typo.html
+++ b/Ameliorer Typo/typo.html
@@ -6,8 +6,24 @@
 <link href="https://necolas.github.io/normalize.css/latest/normalize.css" rel="stylesheet">
 </head>
 
+
+	<nav class="navbar">
+  <ul class="menu">
+      <li class="menu1"> <a class="liens_menu" href="#">Medium</a></li>   
+      <li class="menu1"> <a class="liens_menu" href="#">Lifestyle</a></li>  
+  </ul>
+
+  <ul class="menu0">
+      <li class="menu2"> <a class="liens_menu" href="#">Become a member</a></li>
+      <li class="menu2"> <a class="liens_menu" href="#">Sign in</a></li>
+      <li class="menu2"> <a class="liens_menu" href="#">Get started</a></li>
+  </ul>
+</nav>
+
+<main>
+  
 <body>
-	
+
 <header>
   <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/typo.jpg" class="image1">
 	<h1>8 façons simples d’améliorer la typographie dans vos designs</h1>
@@ -22,7 +38,7 @@
 
 </header>
 
-<main>
+
 	
 
         <p>Beaucoup de gens, y compris les designers, pensent que la typographie consiste à choisir une police, sa taille et si elle doit être grasse ou pas. Pour la plupart des gens, ça s 'arrête là. Obtenir une bonne typographie demande tellement plus, notamment de s 'attarder sur les détails que les designers négligent souvent.</p>
