--- a/Turlututu/Turlututu.html
+++ b/Turlututu/Turlututu.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-      <main>
+      <header>
+      
 
       <nav class="navbar">
       <ul class="menu">
@@ -29,7 +30,8 @@
       <li class="liste2"> <i class="fas fa-user-alt"></i> <a href="#">Log in</a></li>
       </ul>
       </nav>
-
+      </header>
+      <main>
 <section class="partie1">
 
       <div class="container">
