--- a/Turlututu/Turlututu.html
+++ b/Turlututu/Turlututu.html
@@ -110,9 +110,9 @@
             <li> <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/fwd.png" class="logo6"></li>
 
       </ul>
-      
+      <ul class="liste_logo">
       <li> <img src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/product-hunt.png" class="logo7  "></li>      
-
+      </ul>
 </section>      
 
 <section class="partie6">
